# MyNixOS

./: .pre-commit-config.yaml  .sops.yaml  README.md  autostart.sh  devenv.nix  flake.nix  rc.lua  shell.nix  utils.lua
core/: bindings.lua  init.lua  layout.lua  rules.lua  tags.lua
home/: default.nix
home/gui/: default.nix  gtk.nix
home/modules/: default.nix
home/modules/cmd/: default.nix
home/overlays/: default.nix  prismlauncher.nix  rofi-plugins.nix  vesktop.nix
home/programms/: default.nix
host/: configuration.nix  hardware-configuration.nix
host/jano/: configuration.nix  default.nix
hosts/: secrets.yaml
hosts/jano/: configuration.nix  default.nix  hardware-configuration.nix
json/: config.json
lib/: helpers.nix  mkSystem.nix
modules/: default.nix  desktop.lua  init.lua  notification.lua
modules/bar/: init.lua  utils.lua
modules/home-manager/: default.nix  home.nix
modules/launcher/: init.lua
modules/nixos/: default.nix  gpu.nix  grub.nix  qmk.nix  sops.nix  steam.nix  vpn.nix
overlays/: opencore.nix  rofi-calc.nix  rofi-emoji.nix
overlays/vesktop/: default.nix
pkgs/vesktop/: default.nix
secrets/: passwd.nix  secrets.yaml  work-vpn-wg-preshared.key  work-vpn-wg.key
signal/: init.lua  signals.lua
signal/system/: init.lua  microphone.lua  volume.lua
system/: default.nix
system/modules/: default.nix
templates/: default.nix
templates/cpp/: CMakeLists.txt  flake.nix  main.cpp
templates/go/: flake.nix
templates/golang/: flake.nix
themes/catppuccin/: theme.lua
themes/kanagawa/: theme.lua
(+250 files in other folders)
